--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		    <div class="col-lg-12">
 			<div class="intro-message">
 			    <h1>CoderZh</h1>
-			    <h3>welcome to my home page!</h3>
+			    <h3>Welcome to my home page!</h3>
 			    <hr class="intro-divider">
 			    <ul class="list-inline intro-social-buttons">
 				        
@@ -66,7 +66,7 @@
 	</li>
 
 	<li>
-		<a href="http://blog.coderzh.com" class="btn btn-default btn-lg">
+		<a href="http://blog.coderzh.com/" class="btn btn-default btn-lg">
 			<i class="fa fa-book fa-fw"></i>
 			<span class="network-name">Blog</span>
 		</a>
@@ -91,7 +91,7 @@
 
 <p>I am a Programmer, Blogger, Pythonista, Gopher.</p>
 
-<p>More detail view my <a href="http://blog.coderzh.com">blog</a></p>
+<p>More details please view my <a href="http://blog.coderzh.com/">blog</a></p>
 <br/>
 		</div>
 	</div>
