--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="coderzh's homepage">
     <meta name="author" content="coderzh">
-    <base href="http://www.coderzh.com">
+    <base href="https://www.coderzh.com">
     <title>404 Page not found</title>
-    <link href="http://www.coderzh.com/css/bootstrap.min.css" rel="stylesheet">
-    <link href="http://www.coderzh.com/css/landing-page.css" rel="stylesheet">
-    <link href="http://www.coderzh.com/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://www.coderzh.com/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://www.coderzh.com/css/landing-page.css" rel="stylesheet">
+    <link href="https://www.coderzh.com/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="page-scroll navbar-brand" href="http://www.coderzh.com/">CoderZh</a>
+            <a class="page-scroll navbar-brand" href="https://www.coderzh.com/">CoderZh</a>
         </div>
         
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,7 +66,7 @@
 	</li>
 
 	<li>
-		<a href="http://blog.coderzh.com/" class="btn btn-default btn-lg">
+		<a href="https://blog.coderzh.com/" class="btn btn-default btn-lg">
 			<i class="fa fa-book fa-fw"></i>
 			<span class="network-name">Blog</span>
 		</a>
@@ -115,13 +115,13 @@
     </div>
 </footer>
 
-<script src="http://www.coderzh.com/js/jquery-1.11.0.js"></script>
+<script src="https://www.coderzh.com/js/jquery-1.11.0.js"></script>
 
 
-<script src="http://www.coderzh.com/js/jquery.easing.min.js"></script>
+<script src="https://www.coderzh.com/js/jquery.easing.min.js"></script>
 
 
-<script src="http://www.coderzh.com/js/bootstrap.min.js"></script>
+<script src="https://www.coderzh.com/js/bootstrap.min.js"></script>
 
 
 <script src="js/landing-page.js"></script>
