--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     </li>
                     
                 </ul>
-                <p class="copyright text-muted small">Copyright &copy; CoderZh All Rights Reserved. <a href='http://www.miitbeian.gov.cn/'>粤ICP备17074587号-1</a></p>
+                <p class="copyright text-muted small">Copyright &copy; CoderZh All Rights Reserved. <a href='https://beian.miit.gov.cn/'>粤ICP备17074587号-1</a></p>
             </div>
             <div class="col-md-4">
 		Built with <a href="http://gohugo.io">Hugo</a> and the
